using URI instead of URL